prjs/xuantulab/app-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: http-test-svc
      port:
        number: 80
  rules:
  - host: xuanthulab.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
  ingressClassName: nginx
